# construction-ai

./: README.md  pyproject.toml
construction_ai/glulams/: generate_plan.py
